@@ -27,7 +27,8 @@ HOW TO UPDATE?
 ------------------------------------------------------------------------
 
 Fixes:
-- logger: Fixed issue where logs didn't show up at first
+- logger:         fixed issue where logs didn't show up at first
+- get_item_label: fixed issue where internal label was returned #428
 
 ------------------------------------------------------------------------
  VERSION 0.6.119
